<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="14pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- 姓名 -->
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label1"
            android:textSize="10pt"
            android:layout_marginTop="2pt"
            android:layout_marginLeft="5pt"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_toRightOf="@id/text1"
            android:layout_marginTop="2pt"
            android:layout_marginLeft="12pt"
            android:inputType="datetime"
             />

        <!-- 出生日期 -->
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label2"
            android:textSize="10pt"
            android:layout_marginTop="2mm"
            android:layout_marginLeft="5pt"
            android:layout_below="@id/text1"
            />
        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_marginTop="2mm"
            android:layout_marginLeft="4mm"
            android:clickable="true"
            android:focusable="false"
            android:inputType="none"
            android:layout_toRightOf="@id/text2"
            android:layout_below="@id/text1"
            />

        <!-- 性别 -->
        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label3"
            android:textSize="10pt"
            android:layout_marginTop="2mm"
            android:layout_marginLeft="5pt"
            android:layout_below="@id/text2"
            />
        <RadioGroup
            android:id="@+id/sex"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/birthday"
            android:layout_toRightOf="@id/text3"
            android:layout_marginLeft="50pt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <RadioButton
                android:id="@+id/male"
                android:text="男"
                android:textSize="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/female"
                android:text="女"
                android:layout_marginLeft="12pt"
                android:textSize="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <!-- 院系 -->
        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label4"
            android:textSize="10pt"
            android:layout_marginTop="2mm"
            android:layout_marginLeft="5pt"
            android:layout_below="@id/text3"
            />
        <Spinner
            android:id="@+id/college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/colleges"
            android:layout_below="@id/text3"
            android:layout_toRightOf="@id/text4"
            android:layout_marginTop="7pt"
            android:layout_marginLeft="30pt"
            >
        </Spinner>

        <!-- 电话号码 -->
        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label5"
            android:textSize="10pt"
            android:layout_below="@id/text4"
            android:layout_marginTop="2pt"
            android:layout_marginLeft="5pt"
            />
        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_below="@id/text4"
            android:layout_toRightOf="@id/text5"
            android:layout_marginTop="2pt"
            android:layout_marginLeft="12pt"
            android:inputType="phone"
            />

        <!-- 满意与否 -->
        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label6"
            android:textSize="10pt"
            android:layout_marginTop="2mm"
            android:layout_marginLeft="5pt"
            android:layout_below="@id/text5"
            />
        <RadioGroup
            android:id="@+id/satisfaction"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/text5"
            android:layout_toRightOf="@id/text3"
            android:layout_marginLeft="50pt"
            android:layout_marginTop="5pt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <RadioButton
                android:id="@+id/yes"
                android:text="是"
                android:textSize="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/no"
                android:text="否"
                android:layout_marginLeft="12pt"
                android:textSize="10pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <!-- 建议 -->
        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label7"
            android:textSize="10pt"
            android:layout_marginTop="2mm"
            android:layout_marginLeft="5pt"
            android:layout_below="@id/text6"
            />
        <EditText
            android:id="@+id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:layout_below="@id/text6"
            android:layout_toRightOf="@id/text5"
            android:layout_marginTop="2pt"
            android:layout_marginLeft="12pt"
            android:singleLine="false"
            android:maxLines="3"
            />

    </RelativeLayout>

    <!-- 录入信息展示 -->
    <TextView
        android:id="@+id/showInfo"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>